# boids

./: .gitignore  CMakeLists.txt  README  README.md  hostfileexample
ansible/: install.sh  todo
config/: appfileexample  sshexample
modules/: CUDA_compute_capability.cmake
report/: commands.tex  header.tex  rapport.tex  report.tex
script/: dependancies.sh  gcc.sh  genAppFile.sh  merge_files.py  path.sh  scanner.sh  utils.sh  visu.sh
shaders/boids/: boids_fs.glsl  boids_vs.glsl
shaders/box/: box_fs.glsl  box_vs.glsl
src/: barbecue.cpp  communicator.hpp  cuda.cpp  display.cpp  main.cpp  messenger.cpp  messenger.hpp  options.hpp  sequential.cpp  serial.cpp  tree.cpp
src/boid/: agent.cpp  agent.hpp  agentData.hpp  agentKernel.cu  boidMemoryView.hpp  constBoidMemoryView.hpp  constVectorMemoryView.hpp  initBounds.hpp  thrustBoidMemoryView.hpp  thrustVectorMemoryView.hpp  vectorMemoryView.hpp
src/cuda/: Memory.hpp  device.cpp  device.hpp  kernel.cu  kernel.hpp  kernels.hpp
src/cuda/devicePool/: device.cpp  device.hpp  devicePool.cpp  devicePool.hpp
src/cuda/kernels/: agentKernel.cu  kernel.cu  kernel.hpp  kernel_utilities.cu  kernel_utilities.cuh
src/cuda/memoryManager/: CPUMemory.cpp  CPUMemory.hpp  CPUMemory.tpp  GPUMemory.cpp  GPUMemory.hpp  GPUMemory.tpp  GPUResource.hpp  GPUResource.tpp  PagedCPUResource.hpp  PinnedCPUResource.tpp  UnpagedCPUResource.hpp  UnpagedCPUResource.tpp  sharedResource.tpp
src/mpi/: messenger.hpp  options.hpp
src/parsing/: parser.hpp
src/rendering/renderable/: renderRoot.cpp  renderRoot.hpp  renderTree.cpp  renderTree.hpp  renderable.hpp
src/rendering/renderable/boids/: boids.cpp  boids.hpp
src/rendering/renderable/skybox/: skybox.cpp  skybox.hpp  skybox.hpp.bak
src/rendering/viewer/: viewer.cpp  viewer.hpp
src/shaders/: boids_fs.glsl  boids_vs.glsl
src/struct/: BSPTree.hpp  abstractContainer.hpp  abtractContainer.hpp  arrayContainer.hpp  boidDataStructure.hpp  boidGrid.cu  boidGrid.hpp  boundingBox.hpp  computeGrid.hpp  globalBoidDataStructure.hpp  hypercube.hpp  hypercubeTree.hpp  leafNode.hpp  localBoidDataStructure.hpp  localized.hpp  neighborIds.hpp  rootNode.hpp  treeNode.hpp  triState.hpp
src/struct/grid/: boidGrid.cu  boidGrid.hpp  computeGrid.hpp
src/struct/tree/: leafNode.hpp
src/struct/utils/: abstractContainer.hpp  abstractContainerFactory.hpp  arrayContainer.hpp  boundingBox.hpp  localized.hpp  relativePosition.hpp  simpleContainerFactory.hpp
src/utils/: config.hpp.in  consts.hpp  defines.hpp  globals.cpp  globals.hpp  headers.hpp  types.hpp  utils.cpp  utils.hpp  vector.cpp  vector.hpp
src/utils/cuda/: cudaUtils.cpp  cudaUtils.hpp
src/utils/logs/: log.cpp  log.hpp
src/utils/maths/: matrix.cpp  matrix.hpp  vec.hpp  vec2.hpp  vec3.hpp  vecBool.hpp  vector.cpp  vector.hpp
src/utils/opengl/: glUtils.cpp  glUtils.hpp  parameter.cpp  parameter.hpp
src/utils/opengl/program/: program.cpp  program.hpp
src/utils/opengl/shader/: shader.cpp  shader.hpp
src/utils/opengl/texture/: cubeMap.cpp  cubeMap.hpp  texture.cpp  texture.hpp  texture2D.cpp  texture2D.hpp  texture3D.cpp  texture3D.hpp
src/utils/random/: rand.cpp  rand.hpp
src/workspace/: cudaDistributedWorkspace.cpp  cudaDistributedWorkspace.hpp  cudaWorkspace.cpp  cudaWorkspace.hpp  distWorkspace.cpp  distWorkspace.hpp  workspace.cpp  workspace.hpp
tests/: test_messenger.cpp  test_vec.cpp
